@@ -1,7 +1,8 @@
 package uk.gov.hmcts.reform.civil.ga.service;
 
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.InjectMocks;
@@ -20,7 +21,6 @@ import uk.gov.hmcts.reform.civil.service.refdata.CourtVenueService;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -52,7 +52,7 @@ class GeneralAppLocationRefDataServiceTest {
     private GeneralAppLocationRefDataService refDataService;
 
     private List<LocationRefData> getAllLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -93,8 +93,50 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getAllLocationsRefDataResponse(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", serviceId, "London", "AA0 0BB",
+                                            "court address 1111"
+        ));
+        responseData.add(getLocationRefData("site_name_02", serviceId, "London", "AA0 0BB",
+                                            "court address 2222"
+        ));
+        responseData.add(getLocationRefData("site_name_03", serviceId, "Midlands", "AA0 0BB",
+                                            "court address 3333"
+        ));
+        responseData.add(getLocationRefData("site_name_04", serviceId,  "Midlands", "AA0 0BB",
+                                            "court address 4444"
+        ));
+        responseData.add(getLocationRefData("site_name_05", serviceId, "North East", "AA0 0BB",
+                                            "court address 5555"
+        ));
+        responseData.add(getLocationRefData("site_name_06", serviceId, "South East", "AA0 0BB",
+                                            "court address 6666"
+        ));
+        responseData.add(getLocationRefData("site_name_07", serviceId, "North West", "AA0 0BB",
+                                            "court address 7777"
+        ));
+        responseData.add(getLocationRefData("site_name_08", serviceId, "South West", "AA0 0BB",
+                                            "court address 8888"
+        ));
+        responseData.add(getLocationRefData("site_name_09", serviceId, "Wales", "AA0 0BB",
+                                            "court address 9999"
+        ));
+        responseData.add(getLocationRefData("site_name_10", serviceId, "London", "AA0 0BB",
+                                            "court address 1001"
+        ));
+        responseData.add(getLocationRefData("site_name_11", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 1011"
+        ));
+        responseData.add(getLocationRefData("site_name_12", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 1012"
+        ));
+
+        return responseData;
+    }
+
     private List<LocationRefData> getAllLocationsRefDataResponseByEpimms() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -102,8 +144,17 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getAllLocationsRefDataResponseByEpimms(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", serviceId, "London", "AA0 0BB",
+                                            "court address 1111"
+        ));
+
+        return responseData;
+    }
+
     private List<LocationRefData> getLocationRefDataResponseForCcmcc() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("banana", "orange", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -111,8 +162,17 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getLocationRefDataResponseForCcmcc(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("banana", serviceId, "orange", "AA0 0BB",
+                                            "court address 1111"
+        ));
+
+        return responseData;
+    }
+
     private List<LocationRefData> getLocationRefDataResponseForCnbc() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("pineapple", "mango", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -120,8 +180,17 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getLocationRefDataResponseForCnbc(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("pineapple", serviceId, "mango", "AA0 0BB",
+                                            "court address 1111"
+        ));
+
+        return responseData;
+    }
+
     private List<LocationRefData> getNonScotlandLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "London", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -162,8 +231,50 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getNonScotlandLocationsRefDataResponse(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", serviceId, "London", "AA0 0BB",
+                                            "court address 1111"
+        ));
+        responseData.add(getLocationRefData("site_name_02", serviceId, "London", "AA0 0BB",
+                                            "court address 2222"
+        ));
+        responseData.add(getLocationRefData("site_name_03", serviceId, "Midlands", "AA0 0BB",
+                                            "court address 3333"
+        ));
+        responseData.add(getLocationRefData("site_name_04", serviceId, "Midlands", "AA0 0BB",
+                                            "court address 4444"
+        ));
+        responseData.add(getLocationRefData("site_name_05", serviceId, "North East", "AA0 0BB",
+                                            "court address 5555"
+        ));
+        responseData.add(getLocationRefData("site_name_06", serviceId, "South East", "AA0 0BB",
+                                            "court address 6666"
+        ));
+        responseData.add(getLocationRefData("site_name_07", serviceId, "North West", "AA0 0BB",
+                                            "court address 7777"
+        ));
+        responseData.add(getLocationRefData("site_name_08", serviceId, "South West", "AA0 0BB",
+                                            "court address 8888"
+        ));
+        responseData.add(getLocationRefData("site_name_09", serviceId, "Wales", "AA0 0BB",
+                                            "court address 9999"
+        ));
+        responseData.add(getLocationRefData("site_name_10", serviceId,  "London", "AA0 0BB",
+                                            "court address 1001"
+        ));
+        responseData.add(getLocationRefData("site_name_11", serviceId, "Midlands", "AA0 0BB",
+                                            "court address 1011"
+        ));
+        responseData.add(getLocationRefData("site_name_12", serviceId, "Wales", "AA0 0BB",
+                                            "court address 1012"
+        ));
+
+        return responseData;
+    }
+
     private List<LocationRefData> getOnlyScotlandLocationsRefDataResponse() {
-        List<LocationRefData> responseData = new ArrayList<LocationRefData>();
+        List<LocationRefData> responseData = new ArrayList<>();
         responseData.add(getLocationRefData("site_name_01", "Scotland", "AA0 0BB",
                                             "court address 1111"
         ));
@@ -183,185 +294,234 @@ class GeneralAppLocationRefDataServiceTest {
         return responseData;
     }
 
+    private List<LocationRefData> getOnlyScotlandLocationsRefDataResponse(String serviceId) {
+        List<LocationRefData> responseData = new ArrayList<>();
+        responseData.add(getLocationRefData("site_name_01", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 1111"
+        ));
+        responseData.add(getLocationRefData("site_name_02", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 2222"
+        ));
+        responseData.add(getLocationRefData("site_name_03", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 3333"
+        ));
+        responseData.add(getLocationRefData("site_name_04", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 4444"
+        ));
+        responseData.add(getLocationRefData("site_name_05", serviceId, "Scotland", "AA0 0BB",
+                                            "court address 5555"
+        ));
+
+        return responseData;
+    }
+
     private LocationRefData getLocationRefData(String siteName, String region, String postcode, String courtAddress) {
         return new LocationRefData().setSiteName(siteName).setRegion(region)
             .setPostcode(postcode).setCourtAddress(courtAddress);
     }
 
+    private LocationRefData getLocationRefData(String siteName, String serviceId, String region, String postcode, String courtAddress) {
+        return new LocationRefData().setSiteName(siteName).setServiceId(serviceId).setRegion(region)
+            .setPostcode(postcode).setCourtAddress(courtAddress);
+    }
+
     private DynamicList getLocationsFromList(final List<LocationRefData> locations) {
-        return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
-                .append(" - ").append(location.getCourtAddress())
-                .append(" - ").append(location.getPostcode()).toString())
-                            .collect(Collectors.toList()));
+        return fromList(locations.stream().map(location -> location.getSiteName() +
+                " - " + location.getCourtAddress() +
+                " - " + location.getPostcode())
+                            .toList());
+    }
+
+    private DynamicList getLocationsFromListWithServiceId(final List<LocationRefData> locations) {
+        return fromList(locations.stream().map(location -> location.getSiteName() +
+                " - " + location.getServiceId() +
+                " - " + location.getCourtAddress() +
+                " - " + location.getPostcode())
+                            .toList());
     }
 
     private List<String> locationsFromDynamicList(DynamicList dynamicList) {
         return dynamicList.getListItems().stream()
             .map(DynamicListElement::getLabel)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsAllLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsAllLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCMLAndHLCourts(
             anyString(),
+            anyString(),
             anyString()
-        )).thenReturn(getAllLocationsRefDataResponse());
+        )).thenReturn(getAllLocationsRefDataResponse(serviceId));
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
-            .containsOnly(
-                "site_name_01 - court address 1111 - AA0 0BB",
-                "site_name_02 - court address 2222 - AA0 0BB",
-                "site_name_03 - court address 3333 - AA0 0BB",
-                "site_name_04 - court address 4444 - AA0 0BB",
-                "site_name_05 - court address 5555 - AA0 0BB",
-                "site_name_06 - court address 6666 - AA0 0BB",
-                "site_name_07 - court address 7777 - AA0 0BB",
-                "site_name_08 - court address 8888 - AA0 0BB",
-                "site_name_09 - court address 9999 - AA0 0BB",
-                "site_name_10 - court address 1001 - AA0 0BB"
+            .containsOnly("site_name_01 - " + serviceId + " - court address 1111 - AA0 0BB",
+                          "site_name_02 - " + serviceId + " - court address 2222 - AA0 0BB",
+                          "site_name_03 - " + serviceId + " - court address 3333 - AA0 0BB",
+                          "site_name_04 - " + serviceId + " - court address 4444 - AA0 0BB",
+                          "site_name_05 - " + serviceId + " - court address 5555 - AA0 0BB",
+                          "site_name_06 - " + serviceId + " - court address 6666 - AA0 0BB",
+                          "site_name_07 - " + serviceId + " - court address 7777 - AA0 0BB",
+                          "site_name_08 - " + serviceId + " - court address 8888 - AA0 0BB",
+                          "site_name_09 - " + serviceId + " - court address 9999 - AA0 0BB",
+                          "site_name_10 - " + serviceId + " - court address 1001 - AA0 0BB"
             );
 
-        assertThat(courtLocations.size()).isEqualTo(10);
+        assertThat(courtLocations).hasSize(10);
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsNullBody() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsNullBody(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCMLAndHLCourts(
+            anyString(),
             anyString(),
             anyString()
         )).thenReturn(new ArrayList<>());
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
         assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsOnlyScotlandLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsOnlyScotlandLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCMLAndHLCourts(
             anyString(),
+            anyString(),
             anyString()
-        )).thenReturn(getOnlyScotlandLocationsRefDataResponse());
+        )).thenReturn(getOnlyScotlandLocationsRefDataResponse(serviceId));
 
-        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token");
+        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token", serviceId);
 
-        assertThat(courtLocations.size()).isEqualTo(0);
+        assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsNonScotlandLocations() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsNonScotlandLocations(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCMLAndHLCourts(
             anyString(),
+            anyString(),
             anyString()
-        )).thenReturn(getNonScotlandLocationsRefDataResponse());
+        )).thenReturn(getNonScotlandLocationsRefDataResponse(serviceId));
 
-        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token");
+        List<LocationRefData> courtLocations = refDataService.getCourtLocations("user_token", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
-        assertThat(courtLocations.size()).isEqualTo(12);
+        assertThat(courtLocations).hasSize(12);
         assertThat(locationsFromDynamicList(courtLocationString)).containsOnly(
-            "site_name_01 - court address 1111 - AA0 0BB",
-            "site_name_02 - court address 2222 - AA0 0BB",
-            "site_name_03 - court address 3333 - AA0 0BB",
-            "site_name_04 - court address 4444 - AA0 0BB",
-            "site_name_05 - court address 5555 - AA0 0BB",
-            "site_name_06 - court address 6666 - AA0 0BB",
-            "site_name_07 - court address 7777 - AA0 0BB",
-            "site_name_08 - court address 8888 - AA0 0BB",
-            "site_name_09 - court address 9999 - AA0 0BB",
-            "site_name_10 - court address 1001 - AA0 0BB",
-            "site_name_11 - court address 1011 - AA0 0BB",
-            "site_name_12 - court address 1012 - AA0 0BB"
+            "site_name_01 - " + serviceId + " - court address 1111 - AA0 0BB",
+            "site_name_02 - " + serviceId + " - court address 2222 - AA0 0BB",
+            "site_name_03 - " + serviceId + " - court address 3333 - AA0 0BB",
+            "site_name_04 - " + serviceId + " - court address 4444 - AA0 0BB",
+            "site_name_05 - " + serviceId + " - court address 5555 - AA0 0BB",
+            "site_name_06 - " + serviceId + " - court address 6666 - AA0 0BB",
+            "site_name_07 - " + serviceId + " - court address 7777 - AA0 0BB",
+            "site_name_08 - " + serviceId + " - court address 8888 - AA0 0BB",
+            "site_name_09 - " + serviceId + " - court address 9999 - AA0 0BB",
+            "site_name_10 - " + serviceId + " - court address 1001 - AA0 0BB",
+            "site_name_11 - " + serviceId + " - court address 1011 - AA0 0BB",
+            "site_name_12 - " + serviceId + " - court address 1012 - AA0 0BB"
         );
     }
 
-    @Test
-    void shouldReturnEmptyList_whenLRDThrowsException() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnEmptyList_whenLRDThrowsException(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCMLAndHLCourts(
+            anyString(),
             anyString(),
             anyString()
         )).thenThrow(new RestClientException("403"));
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocations("user_token");
+            .getCourtLocations("user_token", serviceId);
 
-        assertThat(courtLocations.size()).isEqualTo(0);
+        assertThat(courtLocations).isEmpty();
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsAllLocationsByEpimmsId() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsAllLocationsByEpimmsId(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCourtByEpimmsId(
             anyString(),
             anyString(),
+            anyString(),
             anyString()
-        )).thenReturn(getAllLocationsRefDataResponseByEpimms());
+        )).thenReturn(getAllLocationsRefDataResponseByEpimms(serviceId));
 
         List<LocationRefData> courtLocations = refDataService
-            .getCourtLocationsByEpimmsId("user_token", "00000");
+            .getCourtLocationsByEpimmsId("user_token", "00000", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
             .containsOnly(
-                "site_name_01 - court address 1111 - AA0 0BB"
-            );
-
-        assertThat(courtLocations.size()).isEqualTo(1);
-    }
-
-    @Test
-    void shouldReturnLocations_whenLRDReturnsCcmcc() {
-        when(authTokenGenerator.generate()).thenReturn("service_token");
-        when(courtVenueService.getCourtVenueByName(
-            anyString(),
-            anyString(),
-            anyString()
-        )).thenReturn(getLocationRefDataResponseForCcmcc());
-
-        List<LocationRefData> courtLocations = refDataService
-            .getCcmccLocation("user_token");
-
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
-
-        assertThat(locationsFromDynamicList(courtLocationString))
-            .containsOnly(
-                "banana - court address 1111 - AA0 0BB"
+                "site_name_01 - " + serviceId + " - court address 1111 - AA0 0BB"
             );
 
         assertThat(courtLocations).hasSize(1);
     }
 
-    @Test
-    void shouldReturnLocations_whenLRDReturnsCnbc() {
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsCcmcc(String serviceId) {
         when(authTokenGenerator.generate()).thenReturn("service_token");
         when(courtVenueService.getCourtVenueByName(
             anyString(),
             anyString(),
+            anyString(),
             anyString()
-        )).thenReturn(getLocationRefDataResponseForCnbc());
+        )).thenReturn(getLocationRefDataResponseForCcmcc(serviceId));
 
         List<LocationRefData> courtLocations = refDataService
-            .getCnbcLocation("user_token");
+            .getCcmccLocation("user_token", serviceId);
 
-        DynamicList courtLocationString = getLocationsFromList(courtLocations);
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
 
         assertThat(locationsFromDynamicList(courtLocationString))
             .containsOnly(
-                "pineapple - court address 1111 - AA0 0BB"
+                "banana - " + serviceId + " - court address 1111 - AA0 0BB"
+            );
+
+        assertThat(courtLocations).hasSize(1);
+    }
+
+    @ParameterizedTest
+    @CsvSource({"AAA6", "AAA7"})
+    void shouldReturnLocations_whenLRDReturnsCnbc(String serviceId) {
+        when(authTokenGenerator.generate()).thenReturn("service_token");
+        when(courtVenueService.getCourtVenueByName(
+            anyString(),
+            anyString(),
+            anyString(),
+            anyString()
+        )).thenReturn(getLocationRefDataResponseForCnbc(serviceId));
+
+        List<LocationRefData> courtLocations = refDataService
+            .getCnbcLocation("user_token", serviceId);
+
+        DynamicList courtLocationString = getLocationsFromListWithServiceId(courtLocations);
+
+        assertThat(locationsFromDynamicList(courtLocationString))
+            .containsOnly(
+                "pineapple - " + serviceId + " - court address 1111 - AA0 0BB"
             );
 
         assertThat(courtLocations).hasSize(1);
